--- a/traitors/index.html
+++ b/traitors/index.html
@@ -127,6 +127,7 @@ footer {
     <div class="card"><strong>🦊 Na Sionnaigh (2–3)</strong><br>Déanann siad iarracht gach duine eile a mharú i rith na hoíche.</div>
     <div class="card"><strong>🦉 An tUlchabhán</strong><br>Is féidir leo a fháil amach uair amháin sa bhabhta an sionnach é duine áirithe.</div>
     <div class="card"><strong>🦔 An Ghráinneog</strong><br>Is féidir leo duine amháin a chosaint gach oíche (fiú iad féin).</div>
+    <div class="card"><strong>An Scéalaí</strong><br>Bíonn scéalaí ann freisin, nach nglacann páirt sa chluiche, ach a thugann treoracha do na hainmhithe - cathain na súile a oscailt srl.</div>
 </section>
 
 <section>
@@ -166,38 +167,11 @@ footer {
 </section>
 
 <section>
-    <h2>🎲 Achoimre ghearr ar na tréimhsí oíche agus lae, le haghaidh an scéalaí.</h2>
-    <button onclick="toggleRules()">Taispeáin / Folaigh Achoimre</button>
-    <div id="quickRules" class="hidden">
-        <div class="card">
-            <strong>Le Linn na hOíche:</strong><br>
-            1. Dúnann gach duine a shúile.<br>
-            2. Osclaíonn na Sionnaigh a shúile.<br>
-            3. Roghnaíonn na Sionnaigh íospartach.<br>
-            4. Dúnann na Sionnaigh a shúile.<br>
-            5. Osclaíonn an tUlchabhán a súile.<br>
-            6. Fiosraíonn an tUlchabhán faoi imreoir éigin.<br>
-            7. Dúnann an tUlchabhán a súile.<br>
-            8. Osclaíonn an Ghráinneog a súile.<br>
-            9. Roghnaíonn siad duine éigin le cosaint.<br>
-            10. Dúnann an Ghráinneog a shúile arís.<br>
-            <hr>
-            <strong>I Rith an Lae:</strong><br>
-            1. Dúisíonn gach duine - seachas an té a roghnaigh na Sionnaigh.<br>
-            2. Plé idir na himreoirí: cúiseamh, leithscéalta, agus bréaga.<br>
-            3. Scríobhann gach duine ainm imreora amháin chun a chur amach ón bhforaois.<br>
-            4. Nochtar na vótaí; cuirtear an té leis an líon is mó vótaí amach as an gcluiche.<br>
-            5. Sula n-imíonn siad, insíonn siad an Sionnach iad.
-        </div>
-    </div>
-</section>
-
-<section>
     <h2>❓ Fiosrúcháin Coitianta </h2>
     <div class="card">
-        <strong>Mura bhféidir leat labhairt, conas a n-insítear cén dóigh a bheidh fhios ag na sionnaigh srl cathain gur féidir leo a shúile a oscailt, conas a roghnaítear íospartach srl?</strong><br>
+        <strong>Mura bhféidir leat labhairt le linn na hoíche, conas a roghnaítear íospartach srl?</strong><br>
         <em>Ar ndóigh, caithfear fanacht i do thost le linn na hoíche, ionas nach mbeidh a fhios ag na himreoirí eile cén ról a bhfuil agat. Bíonn scéalaí ag stiúradh na hoíche, ag rá leis na hainmhithe éagsúla cathain 
-    ar cheart dóibh a súile a oscailt, srl. Agus le cur in iúl don scéalaí cén íospartach atá roghnaithe, tig leat do cheann a chromadh nó méar a shíneadh ina dtreo, ach caithfear a bheith ciúin! 
+    ar cheart dóibh a súile a oscailt, srl, agus le cur in iúl don scéalaí cén íospartach atá roghnaithe, tig leat do cheann a chromadh nó méar a shíneadh ina dtreo, ach caithfear a bheith ciúin! 
     Moltar gan éadaí nó seodra glórach a caitheamh.</em>
     </div>
     <div class="card">
@@ -230,13 +204,41 @@ footer {
         <strong>An gá gléasadh suas?</strong> <br>
         <em> Ní gá. Ach má tá feisteas oiriúnach agat, fáilte romhat é a chaitheamh!</em>
     </div>
+</section>
+    
+<section>
+    <h2>Achoimre ghearr ar na tréimhsí oíche agus lae, le haghaidh an scéalaí.</h2>
+    <button onclick="toggleRules()">Taispeáin / Folaigh Achoimre</button>
+    <div id="quickRules" class="hidden">
+        <div class="card">
+            <strong>Le Linn na hOíche:</strong><br>
+            1. Dúnann gach duine a shúile.<br>
+            2. Osclaíonn na Sionnaigh a shúile.<br>
+            3. Roghnaíonn na Sionnaigh íospartach.<br>
+            4. Dúnann na Sionnaigh a shúile.<br>
+            5. Osclaíonn an tUlchabhán a súile.<br>
+            6. Fiosraíonn an tUlchabhán faoi imreoir éigin.<br>
+            7. Dúnann an tUlchabhán a súile.<br>
+            8. Osclaíonn an Ghráinneog a súile.<br>
+            9. Roghnaíonn siad duine éigin le cosaint.<br>
+            10. Dúnann an Ghráinneog a shúile arís.<br>
+            <hr>
+            <strong>I Rith an Lae:</strong><br>
+            1. Dúisíonn gach duine - seachas an té a roghnaigh na Sionnaigh.<br>
+            2. Plé idir na himreoirí: cúiseamh, leithscéalta, agus bréaga.<br>
+            3. Scríobhann gach duine ainm imreora amháin chun a chur amach ón bhforaois.<br>
+            4. Nochtar na vótaí; cuirtear an té leis an líon is mó vótaí amach as an gcluiche.<br>
+            5. Sula n-imíonn siad, insíonn siad an Sionnach iad.
+        </div>
+    </div>
+</section>
 
+<section>
     <p style="text-align: center;">
 <br><br>
     <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfiDvNJG2dDp2mpHyZZ4qFZLR2GWwftWlQmlXCpLizApkDb6w/viewform?embedded=true" width="640" height="1679" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
     <br><br>
         <p>
-
 </section>
 
 <footer>
