Update index.html - tweaky tweak

--- a/traitors/index.html
+++ b/traitors/index.html
@@ -184,7 +184,7 @@ footer {
     </div>
     <div class="card">
         <strong>An bhfuil gá clárú roimh ré?</strong> <br>
-        <em>Ba cheart - beidh líon teoranta cluichí agus caraictéir, agus nílimid ag iarraidh go mbeadh díomá ar éinne.</em>
+        <em>Ba cheart - beidh líon teoranta cluichí agus caraictéir, agus nílimid ag iarraidh go mbeadh díomá ar éinne. Tá foirm ag bun an leathanaigh anseo.</em>
     </div>
     <div class="card">
         <strong>Níl mé ag iarraidh páirt a ghlacadh, ach an mbeadh cead agam freastal agus éisteacht?</strong> <br>
@@ -203,6 +203,10 @@ footer {
     <div class="card">
         <strong>An gá gléasadh suas?</strong> <br>
         <em> Ní gá. Ach má tá feisteas oiriúnach agat, fáilte romhat é a chaitheamh!</em>
+    </div>
+    <div class="card">
+        <strong>An féidir liom a bheith i mo scéalaí?</strong> <br>
+        <em> Tá scéalaí againn don oíche - an t-údar mór le rá, Máire Uí Dhufaigh - ach más rud é go bhfuil fonn láidir ort, tig leat nóta iarratais a chur isteach sa bhfoirm clárúcháin agus feicfimid linn.</em>
     </div>
 </section>
     
