--- a/traitors/index.html
+++ b/traitors/index.html
@@ -169,10 +169,10 @@ footer {
 <section>
     <h2>❓ Fiosrúcháin Coitianta </h2>
     <div class="card">
-        <strong>Mura bhféidir leat labhairt le linn na hoíche, conas a roghnaítear íospartach srl?</strong><br>
+        <strong>Mura féidir leat labhairt le linn na hoíche, conas a roghnaítear íospartach srl?</strong><br>
         <em>Ar ndóigh, caithfear fanacht i do thost le linn na hoíche, ionas nach mbeidh a fhios ag na himreoirí eile cén ról a bhfuil agat. Bíonn scéalaí ag stiúradh na hoíche, ag rá leis na hainmhithe éagsúla cathain 
     ar cheart dóibh a súile a oscailt, srl, agus le cur in iúl don scéalaí cén íospartach atá roghnaithe, tig leat do cheann a chromadh nó méar a shíneadh ina dtreo, ach caithfear a bheith ciúin! 
-    Moltar gan éadaí nó seodra glórach a caitheamh.</em>
+    Moltar gan éadaí ná seodra glórach a caitheamh.</em>
     </div>
     <div class="card">
         <strong>Cé chomh fada a mhaireann sé?</strong><br>
@@ -184,7 +184,7 @@ footer {
     </div>
     <div class="card">
         <strong>An bhfuil gá clárú roimh ré?</strong> <br>
-        <em>Ba cheart - beidh líon teoranta cluichí agus caraictéir, agus nílimid ag iarraidh go mbeadh díomá ar éinne. Tá foirm ag bun an leathanaigh anseo.</em>
+        <em>Ba cheart - beidh líon teoranta cluichí agus carachtar, agus nílimid ag iarraidh go mbeadh díomá ar éinne. Tá foirm ag bun an leathanaigh anseo.</em>
     </div>
     <div class="card">
         <strong>Níl mé ag iarraidh páirt a ghlacadh, ach an mbeadh cead agam freastal agus éisteacht?</strong> <br>
@@ -192,11 +192,11 @@ footer {
     </div>
     <div class="card">
         <strong>Níl Gaeilge líofa agam - an féidir liom fós páirt a glacadh?</strong> <br>
-        <em> Is féidir. Sa bhfoirm clárúcháin, is féidir do leibhéal Gaeilge a lua, agus seans go ndéanfaimid iarracht daoine den líofacht céanna a chur le chéile. 
-            Níos cóngairí don am, roinnfear liosta téarmaí/frásaí úsáideacha ar an leathanach seo.</em>
+        <em> Is féidir. Sa bhfoirm chlárúcháin, is féidir do leibhéal Gaeilge a lua, agus seans go ndéanfaimid iarracht daoine den líofacht chéanna a chur le chéile. 
+            Níos gaire don am, roinnfear liosta téarmaí/frásaí úsáideacha ar an leathanach seo.</em>
     </div>
     <div class="card">
-        <strong>An bhfuil costas nó duaiseanna ag baint leis an imeachta?</strong> <br>
+        <strong>An bhfuil costas nó duaiseanna ag baint leis an imeacht?</strong> <br>
         <em> Níl costas ag baint leis, agus beidh cúpla duais randamach ar an oíche. Ní féidir duaiseanna a thabhairt do na buaiteoirí, toisc go mbíonn ag foireann na sionnach ar fad, nó ag na hainmhithe eile ar fad, agus bheadh an méid
         sin duaiseanna indéanta.</em>
     </div>
@@ -206,7 +206,7 @@ footer {
     </div>
     <div class="card">
         <strong>An féidir liom a bheith i mo scéalaí?</strong> <br>
-        <em> Tá scéalaí againn don oíche - an t-údar mór le rá, Máire Uí Dhufaigh - ach más rud é go bhfuil fonn láidir ort, tig leat nóta iarratais a chur isteach sa bhfoirm clárúcháin agus feicfimid linn.</em>
+        <em> Tá scéalaí againn don oíche - an t-údar mór le rá, Máire Uí Dhufaigh - ach más rud é go bhfuil fonn láidir ort, tig leat nóta iarratais a chur isteach sa bhfoirm chlárúcháin agus feicfimid linn.</em>
     </div>
 </section>
     
@@ -216,16 +216,16 @@ footer {
     <div id="quickRules" class="hidden">
         <div class="card">
             <strong>Le Linn na hOíche:</strong><br>
-            1. Dúnann gach duine a shúile.<br>
+            1. Dúnann gach duine a súile.<br>
             2. Osclaíonn na Sionnaigh a shúile.<br>
             3. Roghnaíonn na Sionnaigh íospartach.<br>
-            4. Dúnann na Sionnaigh a shúile.<br>
-            5. Osclaíonn an tUlchabhán a súile.<br>
+            4. Dúnann na Sionnaigh a súile.<br>
+            5. Osclaíonn an tUlchabhán a shúile.<br>
             6. Fiosraíonn an tUlchabhán faoi imreoir éigin.<br>
-            7. Dúnann an tUlchabhán a súile.<br>
+            7. Dúnann an tUlchabhán a shúile.<br>
             8. Osclaíonn an Ghráinneog a súile.<br>
             9. Roghnaíonn siad duine éigin le cosaint.<br>
-            10. Dúnann an Ghráinneog a shúile arís.<br>
+            10. Dúnann an Ghráinneog a súile arís.<br>
             <hr>
             <strong>I Rith an Lae:</strong><br>
             1. Dúisíonn gach duine - seachas an té a roghnaigh na Sionnaigh.<br>
