--- a/traitors/index.html
+++ b/traitors/index.html
@@ -218,6 +218,11 @@ footer {
 <section>
     <h2>❓ Fiosrúcháin Coitianta </h2>
     <div class="card">
+        <strong>Nuair a gcuirtear amach as an gcluiche thú, an féidir leat caint?</strong><br>
+        <em>Ní féidir, ar fhaitíos go dtabharfá leideanna do na daoine atá fós ag imirt. Ba cheart do na daoine a gcuirtear an ruaig orthu théis vótáil a rá an sionnach iad, ach sin an méid, agus ní fhaigheann na
+        daoine roghnaithe ag na sionnaigh an deis sin fiú.</em>
+    </div>
+    <div class="card">
         <strong>Mura féidir leat labhairt le linn na hoíche, conas a roghnaítear íospartach srl?</strong><br>
         <em>Ar ndóigh, caithfear fanacht i do thost le linn na hoíche, ionas nach mbeidh a fhios ag na himreoirí eile cén ról a bhfuil agat. Bíonn scéalaí ag stiúradh na hoíche, ag rá leis na hainmhithe éagsúla cathain 
     ar cheart dóibh a súile a oscailt, srl, agus le cur in iúl don scéalaí cén íospartach atá roghnaithe, tig leat do cheann a chromadh nó méar a shíneadh ina dtreo, ach caithfear a bheith ciúin! 
@@ -225,7 +230,7 @@ footer {
     </div>
     <div class="card">
         <strong>Cé chomh fada a mhaireann sé?</strong><br>
-        <em>Thart ar 10-15 nóiméad do bhabhta iomlán (oíche + lá), so thart ar uair le haghaidh cluiche iomlán.</em>
+        <em>Braitheann sé ar na comhráite i rith an lae, ach thart ar leathuair le haghaidh cluiche iomlán.</em>
     </div>
     <div class="card">
         <strong>Cad a tharlaíonn má tá comhscór ann théis vótáil?</strong> <br>
