--- a/traitors/index.html
+++ b/traitors/index.html
@@ -300,7 +300,7 @@ footer {
 </section>
 
 <section>
-    Maith dúinn an íomha thuas atá cruthaithe ag Intleacht Shaorga. Chuamar i dteagmháil le ealaíontóir cumasach agus báúil don nGaeilge, ach de bharr easpa ama, bhí orainn dul i muinín IS don íomhá seo.
+    Maith dúinn an íomha thuas atá cruthaithe ag Intleacht Shaorga. Chuamar i dteagmháil le ealaíontóir cumasach agus báúil don nGaeilge ach ní raibh sí ar fáil, agus ansin de bharr easpa ama, bhí orainn dul i muinín IS don íomhá seo.
 </section>
     
 <footer>
