--- a/traitors/index.html
+++ b/traitors/index.html
@@ -180,6 +180,10 @@ footer {
 </section>
 
 <section>
+    (Maith dúinn an íomha thuas atá cruthaithe ag Intleacht Shaorga. Chuamar i dteagmháil le ealaíontóir cumasach agus báúil don nGaeilge ach ní raibh sí ar fáil, agus ansin de bharr easpa ama, bhí orainn dul i muinín IS don íomhá seo.)
+</section>
+    
+<section>
     <h2> Dáileadh Ról agus Cur in Aithne</h2>
     <div class="card">
         Faigheann gach duine cárta a insíonn dóibh cén ról a bheas acu. Babhta beag cur in aithne - líne amháin ó gach duine: ainm, ról, agus píosa eolais eile.
@@ -299,9 +303,6 @@ footer {
         <p>
 </section>
 
-<section>
-    Maith dúinn an íomha thuas atá cruthaithe ag Intleacht Shaorga. Chuamar i dteagmháil le ealaíontóir cumasach agus báúil don nGaeilge ach ní raibh sí ar fáil, agus ansin de bharr easpa ama, bhí orainn dul i muinín IS don íomhá seo.
-</section>
     
 <footer>
   <div class="logo-container">
