--- a/traitors/index.html
+++ b/traitors/index.html
@@ -159,6 +159,7 @@ footer {
         líontar an fhoraois le cúisimh, le leithscéalta, agus le hamhras...
     </p>
     <p><strong>Márta 6ú ó 18:00-22:00 in Áras na nGael, Sráid Dhoiminic, H91 E1NY</strong></p>
+    <p><strong>NB: Ní mhaireann na cluichí ach thart ar leath-uair - ní gá fanacht ann don oíche ar fad!</strong></p>
     <p>Líon teoranta spásanna - Cláraigí thíos!</p>
     <img class="main-image" src="https://raw.githubusercontent.com/HFintan/feilire/main/traitors2.jpeg" alt="Sionnach i bhfolach i measc coiníní san fhoraois" width="400">
 <div class="header-logos">
