--- a/traitors/index.html
+++ b/traitors/index.html
@@ -155,10 +155,10 @@ footer {
     <p><i>Cluichí “Traitors” as Gaeilge á n-óstáil ag Na Cabairí</i></p>
     <p class="blurb">
         Tá pobal soineanta coiníní ina gcónaí san fhoraois - ach i ngan fhios dóibh, tá fealltóirí ina measc.
-        Le titim na hoíche, dúisíonn na Sionnaigh agus roghnaíonn siad íospartach. Faoi sholas an lae,
-        líontar an fhoraois le cúisimh, le leithscéalta, agus le hamhras...
+        Le titim na hoíche, dúisíonn na Sionnaigh agus roghnaíonn siad a mbéile. Faoi sholas an lae,
+        líontar an fhoraois le milleán, le leithscéalta, agus le hamhras...
     </p>
-    <p><strong>Márta 6ú ó 18:00-22:00 in Áras na nGael, Sráid Dhoiminic, Gailleamh H91 E1NY</strong></p>
+    <p><strong>Márta 6ú ó 18:00-22:00 in Áras na nGael, Sráid Dhoiminic, Gaillimh H91 E1NY</strong></p>
     <p><strong>NB: Ní mhaireann na cluichí ach thart ar leath-uair - ní gá fanacht ann don oíche ar fad!</strong></p>
     <p>Líon teoranta spásanna - Cláraigí thíos!</p>
     <img class="main-image" src="https://raw.githubusercontent.com/HFintan/feilire/main/traitors2.jpeg" alt="Sionnach i bhfolach i measc coiníní san fhoraois" width="400">
@@ -170,7 +170,6 @@ footer {
 </div>
 </div>
 </header>
-
 <section>
     (Maith dúinn an íomha thuas atá cruthaithe ag Intleacht Shaorga. Chuamar i dteagmháil le ealaíontóir cumasach agus báúil don nGaeilge ach ní raibh sí ar fáil, agus ansin de bharr easpa ama, bhí orainn dul i muinín IS don íomhá seo.)
 </section>
