--- a/traitors/index.html
+++ b/traitors/index.html
@@ -233,6 +233,10 @@ footer {
         daoine roghnaithe ag na sionnaigh an deis sin fiú.</em>
     </div>
     <div class="card">
+        <strong>An mbeidh deis agam níos mó ná cluiche amháin a imirt?</strong> <br>
+        <em> Beidh - agus cinnte dóibh siúd a maraítear go luath, beidh seans acu páirt a glacadh i gcluiche eile le go mbeidh seans ceart cainte acu.</em>
+    </div>
+    <div class="card">
         <strong>Mura féidir leat labhairt le linn na hoíche, conas a roghnaítear íospartach srl?</strong><br>
         <em>Ar ndóigh, caithfear fanacht i do thost le linn na hoíche, ionas nach mbeidh a fhios ag na himreoirí eile cén ról a bhfuil agat. Bíonn scéalaí ag stiúradh na hoíche, ag rá leis na hainmhithe éagsúla cathain 
     ar cheart dóibh a súile a oscailt, srl, agus le cur in iúl don scéalaí cén íospartach atá roghnaithe, tig leat do cheann a chromadh nó méar a shíneadh ina dtreo, ach caithfear a bheith ciúin! 
