Update index.html - foclóir

--- a/traitors/index.html
+++ b/traitors/index.html
@@ -314,14 +314,18 @@ footer {
     <button onclick="toggleGlossary()">Taispeáin / Folaigh Foclóir</button>
 
     <div id="glossary" class="hidden">
-        <div class="card">
-            <strong>Ní mise an sionnach!</strong><br>
-            <em>I am not the fox!</em>
-        </div>
-        <div class="card">
-            <strong>Cén fáth ar roghnaigh tú ___?</strong><br>
-            <em>Why did you choose ___?</em>
-        </div>
+        <ul>
+            <li><strong>coinín/coiníní</strong>: rabbit(s)</li>
+            <li><strong>sionnach/sionnaigh</strong>: fox(es)</li>
+            <li><strong>ulchabhán</strong>: owl</li>
+            <li><strong>gráinneog</strong>: hedgehog</li>
+            <li><strong>fealltóir</strong>: traitor</li>
+            <li><strong>amhrasach</strong>: suspicious</li>
+            <li><strong>vóta</strong>: vote</li>
+            <li><strong>bréag</strong>: lie</li>
+            <li><strong>cosaint</strong>: protection</li>
+            <li><strong>ciontach</strong>: guilty</li>
+        </ul>
     </div>
 </section>
 </section>
