Update index.html - focloir

--- a/traitors/index.html
+++ b/traitors/index.html
@@ -325,6 +325,33 @@ footer {
             <li><strong>bréag</strong>: lie</li>
             <li><strong>cosaint</strong>: protection</li>
             <li><strong>ciontach</strong>: guilty</li>
+            <li><strong>an té atá marbh</strong>: the victim</li>
+            <li><strong>dúnmharfóir</strong>: murderer</li>
+            <li><strong>cinneadh</strong>: decision</li>
+            <li><strong>bréag</strong>: lie</li>
+            <li><strong>fírinne</strong>: truth</li>
+            <li><strong>leithscéal</strong>: excuse</li>
+            <br><br>
+            <li><strong>Cé atá ciontach?</strong>: Who is guilty?</li>
+            <li><strong>Tá sé ciontach/neamhchiontach</strong>: He is guilty/not guilty</li>
+            <li><strong>An sionnach/coinín thú?</strong>: Are you a fox/a rabbit?</li>
+            <li><strong>Ceapaimse gur ulchabhán thú</strong>: I think you're an owl</li>
+            <li><strong>Breathnaigh ar a aghaidh/éadan....tá sé ciontach!</strong>: Look at his face... he's guilty!</li>
+            <li><strong>Tá sé ag insint bréaga</strong>: He is lying </li>
+            <li><strong>Is bréagadóir amach is amach í</strong>: She's an out and out liar</li>
+            <li><strong>Chuir sí an dallamullóg orainn</strong>: We've been hoodwinked</li>
+            <li><strong>Ní chreidim thú</strong>: I don't believe you</li>
+            <li><strong>Bhí dul amú orm</strong>: I was mistaken</li>
+            <li><strong>Ní dhéanfainn é sin</strong>: I wouldn't do that</li>
+            <li><strong>Tá rud éigin aisteach faoi scéal ___ </strong>: There's something strange about ___'s story</li>
+            <li><strong>Cén fáth ar roghnaigh tú ___?</strong>: Why did you choose ____?</li>
+            <li><strong>Tá tú ag iarraidh an milleán a chur orm</strong>: You're trying to put the blame on me</li>
+            <li><strong>Caithfimid duine a roghnú</strong>: We have to pick someone</li>
+            <li><strong>Fan go fóill</strong>: Wait a minute</li>
+            <li><strong>Éist liom</strong>: Listen to me</li>
+            <li><strong>Smaoinigí air seo</strong>: Think about this</li>
+            <li><strong>Má tá ___ ciontach, cé hé/í an sionnach eile?</strong>: If ___ is guilty, who is the other fox?</li>
+            <li><strong>Má chuireann sibh an ruaig orm, beidh aiféala oraibh</strong>: If you banish me, you'll regret it!</li>
         </ul>
     </div>
 </section>
